--- a/one.html
+++ b/one.html
@@ -5,123 +5,67 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
-<div align="center">
-    <a href="one.html">One - Stacked Bar</a> |
-    <a href="two.html">Two - Pie</a> |
-    <a href="three.html">Three - Scatter Plot</a>
-</div>
-<style>
-
-    .axis .domain {
-        display: none;
-    }
-
-</style>
+<h1>Firearm Mortality by State</h1>
 <svg width="960" height="500"></svg>
 <script>
-  var svg = d3.select("svg"),
-    margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = +svg.attr("width") - margin.left - margin.right,
-    height = +svg.attr("height") - margin.top - margin.bottom,
-    g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    var svg = d3.select("svg"),
+            margin = {top: 20, right: 20, bottom: 50, left: 70},
+            width = +svg.attr("width") - margin.left - margin.right,
+            height = +svg.attr("height") - margin.top - margin.bottom;
 
-  var x = d3.scaleBand()
-  .rangeRound([0, width])
-  .paddingInner(0.05)
-  .align(0.1);
+    var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
+        y = d3.scaleLinear().rangeRound([height, 0]);
 
-  var y = d3.scaleLinear()
-  .rangeRound([height, 0]);
+    var g = svg.append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-  var z = d3.scaleOrdinal()
-  .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+    var color = d3.scaleOrdinal(d3.schemeCategory20b);
 
-  d3.csv("data/stacked_bars.csv", function (d, i, columns) {
-    for (i = 1, t = 0; i < columns.length; ++i) t += d[columns[i]] = +d[columns[i]];
-    d.total = t;
-    return d;
-  }, function (error, data) {
-    if (error) throw error;
+    d3.csv("data/FIREARMS2016.csv", function(d) {
+        d.DEATHS = +d.DEATHS;
+        return d;
+    }, function(error, data) {
+        if (error) throw error;
 
-    var keys = data.columns.slice(1);
+        x.domain(data.map(function(d) { return d.STATE; }));
+        y.domain([0, d3.max(data, function(d) { return d.DEATHS; })]);
 
-    data.sort(function (a, b) {
-      return b.total - a.total;
+        g.append("g")
+            .attr("class", "axis axis--x")
+            .attr("transform", "translate(0," + height + ")")
+            .call(d3.axisBottom(x));
+
+        // text label for the x axis
+        svg.append("text")
+            .attr("transform", "translate(" + (width/2) + " ," + (height + margin.top + 40) + ")")
+            .style("text-anchor", "middle")
+            .text("State");
+
+        // Y axis
+        g.append("g")
+            .attr("class", "axis axis--y")
+            .call(d3.axisLeft(y).ticks(10));
+
+        // text label for the x axis
+        svg.append("text")
+            .attr("transform", "rotate(-90)")
+            .attr("y", 0)
+            .attr("x", 0 - (height / 2))
+            .attr("dy", "1em")
+            .style("text-anchor", "middle")
+            .text("Total Deaths");
+
+        // X axis
+        g.selectAll(".bar")
+            .data(data)
+            .enter().append("rect")
+            .attr("class", "bar")
+            .attr("x", function(d) { return x(d.STATE); })
+            .attr("y", function(d) { return y(d.DEATHS); })
+            .attr("width", x.bandwidth())
+            .attr("fill", function(d, i) { return color(i); })
+            .attr("height", function(d) { return height - y(d.DEATHS); });
     });
-    x.domain(data.map(function (d) {
-      return d.State;
-    }));
-    y.domain([0, d3.max(data, function (d) {
-      return d.total;
-    })]).nice();
-    z.domain(keys);
-
-    g.append("g")
-    .selectAll("g")
-    .data(d3.stack().keys(keys)(data))
-    .enter().append("g")
-    .attr("fill", function (d) {
-      return z(d.key);
-    })
-    .selectAll("rect")
-    .data(function (d) {
-      return d;
-    })
-    .enter().append("rect")
-    .attr("x", function (d) {
-      return x(d.data.State);
-    })
-    .attr("y", function (d) {
-      return y(d[1]);
-    })
-    .attr("height", function (d) {
-      return y(d[0]) - y(d[1]);
-    })
-    .attr("width", x.bandwidth());
-
-    g.append("g")
-    .attr("class", "axis")
-    .attr("transform", "translate(0," + height + ")")
-    .call(d3.axisBottom(x));
-
-    g.append("g")
-    .attr("class", "axis")
-    .call(d3.axisLeft(y).ticks(null, "s"))
-    .append("text")
-    .attr("x", 2)
-    .attr("y", y(y.ticks().pop()) + 0.5)
-    .attr("dy", "0.32em")
-    .attr("fill", "#000")
-    .attr("font-weight", "bold")
-    .attr("text-anchor", "start")
-    .text("Population");
-
-    var legend = g.append("g")
-    .attr("font-family", "sans-serif")
-    .attr("font-size", 10)
-    .attr("text-anchor", "end")
-    .selectAll("g")
-    .data(keys.slice().reverse())
-    .enter().append("g")
-    .attr("transform", function (d, i) {
-      return "translate(0," + i * 20 + ")";
-    });
-
-    legend.append("rect")
-    .attr("x", width - 19)
-    .attr("width", 19)
-    .attr("height", 19)
-    .attr("fill", z);
-
-    legend.append("text")
-    .attr("x", width - 24)
-    .attr("y", 9.5)
-    .attr("dy", "0.32em")
-    .text(function (d) {
-      return d;
-    });
-  });
-
 </script>
 </body>
 </html>
